src/tests/typing/fail/unknown_var.tj
module main() = ()
    n:
        a = b + 1
        b = a + 1
    until